--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "sova-challenge",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
+    "tests": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src --ext .ts,.html",
+    "lint:fix": "eslint src --ext .ts,.html --fix",
+    "prepare": "husky",
+    "pre-commit": "npm run lint && npm run tests"
   },
   "private": true,
   "dependencies": {
@@ -26,11 +32,27 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.20",
+    "@angular-eslint/eslint-plugin": "^20.1.1",
+    "@angular-eslint/eslint-plugin-template": "^20.1.1",
     "@angular/cli": "^18.2.20",
     "@angular/compiler-cli": "^18.2.0",
+    "@eslint/js": "^9.30.0",
     "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^9.30.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jsdoc": "^51.2.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^5.5.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.6.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.5.2"
   }
 }
