--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,33 @@
-# Editor configuration, see https://editorconfig.org
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_style = space
+indent_size = 2
 
-[*.ts]
-quote_type = single
-ij_typescript_use_double_quotes = false
+# TypeScript and JavaScript files
+[*.{ts,js}]
+indent_size = 2
 
+# HTML files
+[*.html]
+indent_size = 2
+
+# CSS and SCSS files
+[*.{css,scss}]
+indent_size = 2
+
+# JSON files
+[*.json]
+indent_size = 2
+
+# Markdown files
 [*.md]
-max_line_length = off
 trim_trailing_whitespace = false
