--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.6.0",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "typescript": "~5.5.2"
   }
